--- a/shard.yml
+++ b/shard.yml
@@ -1,10 +1,10 @@
 name: marmot
-version: 0.3.1
+version: 0.4.0
 
 authors:
   - Alexandre Morignot <erdnaxeli@cervoi.se>
 
-crystal: 0.35.1
+crystal: ">=0.35.1,<2"
 
 license: MIT
 
